--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Web Studio (Version 2.1) (Copy)</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -73,97 +80,84 @@
         </ul>
         <ul>
           <li class="portfolio-group">
-             <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow">
-             <img src="./images/img21.jpg" width="370" alt="Laptop display" />
-             <h2 class="portfolio-group-title">Технокряк</h2>
-             <p class="portfolio-group-p">Веб-сайт</p>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img src="./images/img21.jpg" width="370" alt="Laptop display" />
+              <h2 class="portfolio-group-title">Технокряк</h2>
+              <p class="portfolio-group-p">Веб-сайт</p>
             </a>
           </li>
           <li class="portfolio-group">
-             <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow">
-              <img src="./images/img22.jpg" width="370" alt="mens playing basketball" />
-              <h2 class="portfolio-group-title">Постер New Orlean vs Golden Sta</h2>
-               <p class="portfolio-group-p">Дизайн</p>
-              </a>
-          </li>
-          <li class="portfolio-group">
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow">
-            <img src="./images/img33.jpg" width="370" alt="restaurant poster" />
-            <h2 class="portfolio-group-title">Ресторан Seafood</h2>
-            <p class="portfolio-group-p">Додаток</p>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/img22.jpg"
+                width="370"
+                alt="mens playing basketball"
+              />
+              <h2 class="portfolio-group-title">
+                Постер New Orlean vs Golden Sta
+              </h2>
+              <p class="portfolio-group-p">Дизайн</p>
             </a>
           </li>
           <li class="portfolio-group">
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow">
-            <img src="./images/img44.jpg" width="370" alt="headphones" />
-            <h2 class="portfolio-group-title">Проєкт Prime</h2>
-            <p class="portfolio-group-p">Маркетинг</p>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/img33.jpg"
+                width="370"
+                alt="restaurant poster"
+              />
+              <h2 class="portfolio-group-title">Ресторан Seafood</h2>
+              <p class="portfolio-group-p">Додаток</p>
             </a>
           </li>
           <li class="portfolio-group">
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow">
-            <img src="./images/img55.jpg" width="370" alt="two carton boxes" />
-            <h2 class="portfolio-group-title">Проєкт boxes</h2>
-            <p class="portfolio-group-p">Додаток</p>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img src="./images/img44.jpg" width="370" alt="headphones" />
+              <h2 class="portfolio-group-title">Проєкт Prime</h2>
+              <p class="portfolio-group-p">Маркетинг</p>
             </a>
           </li>
           <li class="portfolio-group">
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow">
-            <img src="./images/img66.jpg" width="370" alt="display PC" />
-            <h2 class="portfolio-group-title">Inspiration has no Borders</h2>
-            <p class="portfolio-group6-p">Веб-сайт</p>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/img55.jpg"
+                width="370"
+                alt="two carton boxes"
+              />
+              <h2 class="portfolio-group-title">Проєкт boxes</h2>
+              <p class="portfolio-group-p">Додаток</p>
             </a>
           </li>
           <li class="portfolio-group">
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow">
-            <img src="./images/img77.jpg" width="370" alt="opened bock" />
-            <h2 class="portfolio-group-title">Видання Limited edition</h2>
-            <p class="portfolio-group-p">Дизайн</p>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img src="./images/img66.jpg" width="370" alt="display PC" />
+              <h2 class="portfolio-group-title">Inspiration has no Borders</h2>
+              <p class="portfolio-group6-p">Веб-сайт</p>
             </a>
           </li>
           <li class="portfolio-group">
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow">
-            <img src="./images/img88.jpg" width="370" alt="label" />
-            <h2 class="portfolio-group-title">Проєкт LAB</h2>
-            <p class="portfolio-group-p">Маркетинг</p>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img src="./images/img77.jpg" width="370" alt="opened bock" />
+              <h2 class="portfolio-group-title">Видання Limited edition</h2>
+              <p class="portfolio-group-p">Дизайн</p>
             </a>
           </li>
           <li class="portfolio-group">
-            <a
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow">
-            <img
-              src="./images/img99.jpg"
-              width="370"
-              alt="two hands on Laptop kye board"
-            />
-            <h2 class="portfolio-group-title">Growing business</h2>
-            <p class="portfolio-group-p">Додаток</p>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img src="./images/img88.jpg" width="370" alt="label" />
+              <h2 class="portfolio-group-title">Проєкт LAB</h2>
+              <p class="portfolio-group-p">Маркетинг</p>
+            </a>
+          </li>
+          <li class="portfolio-group">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/img99.jpg"
+                width="370"
+                alt="two hands on Laptop kye board"
+              />
+              <h2 class="portfolio-group-title">Growing business</h2>
+              <p class="portfolio-group-p">Додаток</p>
             </a>
           </li>
         </ul>
