--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Web Studio (Version 2.1) (Copy)</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,11 +18,11 @@
   <body class="body">
     <!-- header -->
     <header class="header">
-      <nav>
-        <a lang="en" href="" class="logo"
-          >Web<span class="studio-logo">Studio</span></a
-        >
+      <div class="container-header">
+        <a lang="en" href="" class="logo">Web<span class="studio-logo">Studio</span></a>
+        
         <ul>
+        <nav class="navigation">
           <li>
             <a href="./index.html" class="nav-studio current">Студія</a>
           </li>
@@ -29,7 +32,7 @@
           <li><a href="" class="nav-contact">Контакт</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact-mail">
         <li>
           <a href="mailto:info@devstudio.com" class="header-mail"
             >info@devstudio.com
@@ -41,17 +44,22 @@
           </a>
         </li>
       </ul>
+      </div>
+      
     </header>
     <!-- main -->
     <main>
       <section class="main-section">
+        <div class="container-main">
         <h1 class="main-section-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="main-section-button">
           Замовити послугу
         </button>
+        </div>
       </section>
       <!-- Особливості -->
       <section class="main-qualities">
+        <div class="container-qualities">
         <h2 class="visually-hidden">Наші Особливості</h2>
         <ul>
           <li>
@@ -82,9 +90,11 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <!-- Чим займаемось -->
       <section class="what-doing">
+        <div class="container-what-doing">
         <h2 class="what-doing-title">Чим ми займаємося</h2>
         <ul>
           <li>
@@ -105,9 +115,11 @@
             />
           </li>
         </ul>
+        </div>
       </section>
       <!-- Наша команда -->
       <section class="our-time">
+        <div class="container-our-time">
         <h2 class="our-time-title">Наша команда</h2>
         <ul>
           <li class="our-time-card">
@@ -147,10 +159,12 @@
             <p class="our-time-position">UI Disigner</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
     <footer class="footer">
+      <div class="container-footer">
       <a class="logo" href="./index.html"
         >Web<span class="studio-footer">Studio</span></a
       >
@@ -161,7 +175,8 @@
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
-              class="footer-adress">
+              class="footer-adress"
+            >
               м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
@@ -175,6 +190,7 @@
           </li>
         </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
