--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
           <div class="portfolio-group-box1">
           <li class="portfolio-group1">
             <a href="" target="_blank" rel="noopener noreferrer nofollow">
-              <img src="./images/img21.jpg" width="370" alt="Laptop display" />
+              <img src="./images/img21.jpg" width="370" class="1mg" alt="Laptop display" />
               <h2 class="portfolio-group-title">Технокряк</h2>
               <p class="portfolio-group-p">Веб-сайт</p>
             </a>
@@ -97,7 +97,7 @@
             <a href="" target="_blank" rel="noopener noreferrer nofollow">
               <img
                 src="./images/img22.jpg"
-                width="370"
+                width="370" class="img"
                 alt="mens playing basketball"
               />
               <h2 class="portfolio-group-title">
@@ -110,7 +110,7 @@
             <a href="" target="_blank" rel="noopener noreferrer nofollow">
               <img
                 src="./images/img33.jpg"
-                width="370"
+                width="370" class="img"
                 alt="restaurant poster"
               />
               <h2 class="portfolio-group-title">Ресторан Seafood</h2>
@@ -121,7 +121,7 @@
           <div class="portfolio-group-box2">
           <li class="portfolio-group4">
             <a href="" target="_blank" rel="noopener noreferrer nofollow">
-              <img src="./images/img44.jpg" width="370" alt="headphones" />
+              <img src="./images/img44.jpg" width="370" class="img" alt="headphones" />
               <h2 class="portfolio-group-title">Проєкт Prime</h2>
               <p class="portfolio-group-p">Маркетинг</p>
             </a>
@@ -139,7 +139,7 @@
           </li>
           <li class="portfolio-group6">
             <a href="" target="_blank" rel="noopener noreferrer nofollow">
-              <img src="./images/img66.jpg" width="370" alt="display PC" />
+              <img src="./images/img66.jpg" width="370" class="img" alt="display PC" />
               <h2 class="portfolio-group-title">Inspiration has no Borders</h2>
               <p class="portfolio-group-p">Веб-сайт</p>
             </a>
@@ -148,14 +148,14 @@
           <div class="portfolio-group-box3">
           <li class="portfolio-group7">
             <a href="" target="_blank" rel="noopener noreferrer nofollow">
-              <img src="./images/img77.jpg" width="370" alt="opened bock" />
+              <img src="./images/img77.jpg" width="370" class="img" alt="opened bock" />
               <h2 class="portfolio-group-title">Видання Limited edition</h2>
               <p class="portfolio-group-p">Дизайн</p>
             </a>
           </li>
           <li class="portfolio-group8">
             <a href="" target="_blank" rel="noopener noreferrer nofollow">
-              <img src="./images/img88.jpg" width="370" alt="label" />
+              <img src="./images/img88.jpg" width="370" class="img" alt="label" />
               <h2 class="portfolio-group-title">Проєкт LAB</h2>
               <p class="portfolio-group-p">Маркетинг</p>
             </a>
@@ -164,7 +164,7 @@
             <a href="" target="_blank" rel="noopener noreferrer nofollow">
               <img
                 src="./images/img99.jpg"
-                width="370"
+                width="370" class="img"
                 alt="two hands on Laptop kye board"
               />
               <h2 class="portfolio-group-title">Growing business</h2>
