--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <!-- header -->
     <header class="header">
       <div class="container-header">
-        <a lang="en" href="" class="logo">Web<span class="studio-logo">Studio</span></a>
-        
+        <a class="logo"lang="en" href="" >Web<span class="studio-logo">Studio</span></a>
         <ul>
         <nav class="navigation">
           <li>
