--- a/index.html
+++ b/index.html
@@ -176,20 +176,15 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container-footer">
-      <a class="logo-foter" href="./index.html"
-        >Web<span class="studio-footer">Studio</span></a
-      >
-      <address class="address-box">
+        <div class="container-footer">
+      <a class="logo-footer" href="./index.html">Web<span class="studio-footer">Studio</span></a>
+      <address class="address-footer">
         <ul>
           <li>
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+            <a class="footer-address" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
-              class="footer-address"
-            >
-              м. Київ, пр-т Лесі Українки, 26
+              >м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
           <li>
@@ -203,6 +198,5 @@
         </ul>
       </address>
       </div>
-    </footer>
   </body>
 </html>
