--- a/portfolio.html
+++ b/portfolio.html
@@ -10,14 +10,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      referrerpolicy="no-referrer"/>
     <title>Web Studio (Version 2.1) (Copy)</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
   </head>
   <body>
     </head>
@@ -26,7 +24,6 @@
     <header class="header">
       <div class="container-header">
         <a lang="en" href="" class="logo">Web<span class="studio-logo">Studio</span></a>
-        
         <ul>
         <nav class="navigation">
           <li>
@@ -178,19 +175,14 @@
     </main>
     <footer class="footer">
       <div class="container-footer">
-      <a class="logo-foter" href="./index.html"
-        >Web<span class="studio-footer">Studio</span></a
-      >
-      <address class="address-box">
+      <a class="logo-footer" href="./index.html">Web<span class="studio-footer">Studio</span></a>
+      <address class="address-footer">
         <ul>
           <li>
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+            <a class="footer-address" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
-              class="footer-address"
-            >
-              м. Київ, пр-т Лесі Українки, 26
+              >м. Київ, пр-т Лесі Українки, 26
             </a>
           </li>
           <li>
