--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link
-      rel="stylesheet"
+    <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
@@ -16,26 +14,28 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"/>
+      <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     </head>
   <body class="body">
-    <!-- header -->
-    <header class="header">
-      <div class="container-header">
-        <a lang="en" href="" class="logo">Web<span class="studio-logo">Studio</span></a>
-        <ul>
-        <nav class="navigation">
-          <li>
-            <a href="./index.html" class="nav-studio">Студія</a>
+    <!--header-->
+     <header class="header">
+      <div class="container">
+        <div class="container-header">
+          <nav class="navigation">
+        <a class="logo-header"lang="en" href="" >Web<span class="studio-logo">Studio</span></a>
+        <ul class="menu-header">
+        <li>
+            <a href="./index.html" class="nav-studio current">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="nav-portfolio current">Портфоліо</a>
+            <a href="./portfolio.html" class="nav-portfolio">Портфоліо</a>
           </li>
           <li><a href="" class="nav-contact">Контакт</a></li>
         </ul>
       </nav>
-      <ul class="contacts">
+      <ul class="contacts-header">
         <li>
           <a href="mailto:info@devstudio.com" class="header-mail"
             >info@devstudio.com
@@ -48,8 +48,8 @@
         </li>
       </ul>
       </div>
-      
-    </header>
+      </div>
+      </header>
     <main>
       <section class="portfolio">
         <div class="portfolio-container">
