--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     
     <title>Web Studio (Version 2.1) (Copy)</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -172,10 +172,11 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-        <div class="container-footer">
+        <div class="container">
+          <div class="container-footer">
       <a class="logo-footer" href="./index.html">Web<span class="studio-footer">Studio</span></a>
-      <address class="address-footer">
-        <ul>
+      <address>
+        <ul class="address-footer">
           <li>
             <a class="footer-address" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
@@ -194,5 +195,7 @@
         </ul>
       </address>
       </div>
+      </div>
+    </footer>
   </body>
 </html>
