home work 3 adjust

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
         <a class="logo-header"lang="en" href="" >Web<span class="studio-logo">Studio</span></a>
         <ul class="menu-header">
         <li>
-            <a href="./index.html" class="nav-studio current">Студія</a>
+            <a href="./index.html" class="nav-studio ">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="nav-portfolio">Портфоліо</a>
+            <a href="./portfolio.html" class="nav-portfolio current">Портфоліо</a>
           </li>
           <li><a href="" class="nav-contact">Контакт</a></li>
         </ul>
