--- a/index.html
+++ b/index.html
@@ -174,8 +174,10 @@
     <footer class="footer">
         <div class="container">
           <div class="container-footer">
+            <div class="logo-footer-box">
       <a class="logo-footer" href="./index.html">Web<span class="studio-footer">Studio</span></a>
-      <address>
+      </div>
+        <address>
         <ul class="address-footer">
           <li>
             <a class="footer-address" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
