--- a/portfolio.html
+++ b/portfolio.html
@@ -184,7 +184,9 @@
     <footer class="footer">
         <div class="container">
           <div class="container-footer">
+            <div class="logo-footer-box">
       <a class="logo-footer" href="./index.html">Web<span class="studio-footer">Studio</span></a>
+      </div>
       <address>
         <ul class="address-footer">
           <li>
