adjust home work

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,37 +22,33 @@
   <body class="body">
     <!--header-->
     <header class="header">
-      <div class="container">
-        <div class="container-header">
-          <nav class="navigation">
-            <a class="logo-header" lang="en" href=""
-              >Web<span class="studio-logo">Studio</span></a
-            >
-            <ul class="menu-header">
-              <li>
-                <a href="./index.html" class="nav-studio">Студія</a>
-              </li>
-              <li>
-                <a href="./portfolio.html" class="nav-portfolio current"
-                  >Портфоліо</a
-                >
-              </li>
-              <li><a href="" class="nav-contact">Контакт</a></li>
-            </ul>
-          </nav>
-          <ul class="contacts-header">
+      <div class="container container-header">
+        <nav class="navigation">
+          <a class="logo-header" lang="en" href=""
+            >Web<span class="studio-logo">Studio</span></a
+          >
+          <ul class="menu-header">
             <li>
-              <a href="mailto:info@devstudio.com" class="header-mail"
-                >info@devstudio.com
-              </a>
+              <a href="./index.html" class="nav-link">Студія</a>
             </li>
             <li>
-              <a href="tel:+380961111111" class="header-phone">
-                +38 096 111 11 11
-              </a>
+              <a href="./portfolio.html" class="nav-link current">Портфоліо</a>
             </li>
+            <li><a href="" class="nav-link">Контакт</a></li>
           </ul>
-        </div>
+        </nav>
+        <ul class="contacts-header">
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-mail"
+              >info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="header-phone">
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
