--- a/index.html
+++ b/index.html
@@ -23,35 +23,33 @@
   <body class="body">
     <!-- header -->
     <header class="header">
-      <div class="container">
-        <div class="container-header">
-          <nav class="navigation">
-            <a class="logo-header" lang="en" href=""
-              >Web<span class="studio-logo">Studio</span></a
-            >
-            <ul class="menu-header">
-              <li>
-                <a href="./index.html" class="nav-studio current">Студія</a>
-              </li>
-              <li>
-                <a href="./portfolio.html" class="nav-portfolio">Портфоліо</a>
-              </li>
-              <li><a href="" class="nav-contact">Контакт</a></li>
-            </ul>
-          </nav>
-          <ul class="contacts-header">
+      <div class="container container-header">
+        <nav class="navigation">
+          <a class="logo-header" lang="en" href=""
+            >Web<span class="studio-logo">Studio</span></a
+          >
+          <ul class="menu-header">
             <li>
-              <a href="mailto:info@devstudio.com" class="header-mail"
-                >info@devstudio.com
-              </a>
+              <a href="./index.html" class="nav-link current">Студія</a>
             </li>
             <li>
-              <a href="tel:+380961111111" class="header-phone">
-                +38 096 111 11 11
-              </a>
+              <a href="./portfolio.html" class="nav-link">Портфоліо</a>
             </li>
+            <li><a href="" class="nav-link">Контакт</a></li>
           </ul>
-        </div>
+        </nav>
+        <ul class="contacts-header">
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-connect"
+              >info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="header-connect">
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
     <!-- main -->
@@ -70,64 +68,61 @@
       </section>
       <!-- Особливості -->
       <section class="main-qualities">
-        <div class="container">
-          <div class="container-qualities">
-            <h2 class="visually-hidden">Наші Особливості</h2>
-            <ul class="qualities">
-              <li class="qualities-box">
-                <h3 class="main-qualities-title">Увага до деталей</h3>
-                <p class="main-qualities-description">
-                  Ідейні міркування, і навіть початок повсякденної роботи з
-                  формування позиції.
-                </p>
-              </li>
-              <li class="qualities-box">
-                <h3 class="main-qualities-title">Пунктуальність</h3>
-                <p class="main-qualities-description">
-                  Завдання організації, особливо рамки і місце навчання кадрів
-                  тягне у себе.
-                </p>
-              </li>
-              <li class="qualities-box">
-                <h3 class="main-qualities-title">Планування</h3>
-                <p class="main-qualities-description">
-                  Так само консультація з широким активом значною мірою
-                  зумовлює.
-                </p>
-              </li>
-              <li class="qualities-box">
-                <h3 class="main-qualities-title">Сучасні технології</h3>
-                <p class="main-qualities-description">
-                  Значимість цих проблем настільки очевидна, що реалізація
-                  планових завдань.
-                </p>
-              </li>
-            </ul>
-          </div>
+        <div class="container container-qualities">
+          <h2 class="visually-hidden">Наші Особливості</h2>
+          <ul class="qualities">
+            <li class="qualities-box">
+              <h3 class="main-qualities-title">Увага до деталей</h3>
+              <p class="main-qualities-description">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="qualities-box">
+              <h3 class="main-qualities-title">Пунктуальність</h3>
+              <p class="main-qualities-description">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="qualities-box">
+              <h3 class="main-qualities-title">Планування</h3>
+              <p class="main-qualities-description">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="qualities-box">
+              <h3 class="main-qualities-title">Сучасні технології</h3>
+              <p class="main-qualities-description">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- Чим займаемось -->
       <section class="what-doing">
-        <div class="container-what-doing">
+        <div class="container container-what-doing">
           <h2 class="what-doing-title">Чим ми займаємося</h2>
           <ul class="what-doing-list">
             <li class="what-doing-box1">
               <img
-                src="images/img_11.jpg"
+                src="./images/img_11.jpg"
                 width="370"
                 alt="Руки на клавіатурі"
               />
             </li>
             <li class="what-doing-box2">
               <img
-                src="images/img_22.jpg"
+                src="./images/img_22.jpg"
                 width="370"
                 alt="Рука права на клавіатурі ноутбука,в лівій руці смартфон"
               />
             </li>
             <li class="what-doing-box3">
               <img
-                src="images/img_33.jpg"
+                src="./images/img_33.jpg"
                 width="370"
                 alt="Планшет в лівій руці Планшет, на фоні стола з клавіатурою і монітором"
               />
@@ -138,59 +133,57 @@
       <!-- Наша команда -->
       <section class="our-time">
         <div class="container">
-          <div class="container-our-time">
-            <h2 class="our-time-title">Наша команда</h2>
-            <ul class="time-box">
-              <li class="our-time-card1">
-                <img
-                  src="images/img_1.jpg"
-                  class="img"
-                  width="270"
-                  alt="Ігор Дємяненко Prodact Disigner"
-                />
-                <div class="time-description">
-                  <h3 class="our-time-name">Ігор Дємяненко</h3>
-                  <p class="our-time-position">Prodact Disigner</p>
-                </div>
-              </li>
-              <li class="our-time-card2">
-                <img
-                  src="images/img_2.jpg"
-                  class="img"
-                  width="270"
-                  alt="Ольга Рєпіна Frontend Developer"
-                />
-                <div class="time-description">
-                  <h3 class="our-time-name">Ольга Рєпіна</h3>
-                  <p class="our-time-position">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="our-time-card3">
-                <img
-                  src="images/img_3.jpg"
-                  class="img"
-                  width="270"
-                  alt="Микола Тарасов Marketing"
-                />
-                <div class="time-description">
-                  <h3 class="our-time-name">Микола Тарасов</h3>
-                  <p class="our-time-position">Marketing</p>
-                </div>
-              </li>
-              <li class="our-time-card4">
-                <img
-                  src="images/img_4.jpg"
-                  class="img"
-                  width="270"
-                  alt="Михайло Єрмаков UI Disigner"
-                />
-                <div class="time-description">
-                  <h3 class="our-time-name">Михайло Єрмаков</h3>
-                  <p class="our-time-position">UI Disigner</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+          <h2 class="our-time-title">Наша команда</h2>
+          <ul class="time-box">
+            <li class="our-time-card1">
+              <img
+                src="images/img_1.jpg"
+                class="img"
+                width="270"
+                alt="Ігор Дємяненко Prodact Disigner"
+              />
+              <div class="time-description">
+                <h3 class="our-time-name">Ігор Дємяненко</h3>
+                <p class="our-time-position">Prodact Disigner</p>
+              </div>
+            </li>
+            <li class="our-time-card2">
+              <img
+                src="images/img_2.jpg"
+                class="img"
+                width="270"
+                alt="Ольга Рєпіна Frontend Developer"
+              />
+              <div class="time-description">
+                <h3 class="our-time-name">Ольга Рєпіна</h3>
+                <p class="our-time-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="our-time-card3">
+              <img
+                src="images/img_3.jpg"
+                class="img"
+                width="270"
+                alt="Микола Тарасов Marketing"
+              />
+              <div class="time-description">
+                <h3 class="our-time-name">Микола Тарасов</h3>
+                <p class="our-time-position">Marketing</p>
+              </div>
+            </li>
+            <li class="our-time-card4">
+              <img
+                src="images/img_4.jpg"
+                class="img"
+                width="270"
+                alt="Михайло Єрмаков UI Disigner"
+              />
+              <div class="time-description">
+                <h3 class="our-time-name">Михайло Єрмаков</h3>
+                <p class="our-time-position">UI Disigner</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
