--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,12 @@
         </nav>
         <ul class="contacts-header">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-mail"
+            <a href="mailto:info@devstudio.com" class="header-connect"
               >info@devstudio.com
             </a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="header-phone">
+            <a href="tel:+380961111111" class="header-connect">
               +38 096 111 11 11
             </a>
           </li>
