--- a/index.html
+++ b/index.html
@@ -67,33 +67,33 @@
         </div>
       </section>
       <!-- Особливості -->
-      <section class="main-qualities">
-        <div class="container container-qualities">
+      <section class="section-feature">
+        <div class="container">
           <h2 class="visually-hidden">Наші Особливості</h2>
-          <ul class="qualities">
-            <li class="qualities-box">
-              <h3 class="main-qualities-title">Увага до деталей</h3>
-              <p class="main-qualities-description">
+          <ul class="feature">
+            <li class="feature-box">
+              <h3 class="feature-title">Увага до деталей</h3>
+              <p class="feature-description">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="qualities-box">
-              <h3 class="main-qualities-title">Пунктуальність</h3>
-              <p class="main-qualities-description">
+            <li class="feature-box">
+              <h3 class="feature-title">Пунктуальність</h3>
+              <p class="feature-description">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="qualities-box">
-              <h3 class="main-qualities-title">Планування</h3>
-              <p class="main-qualities-description">
+            <li class="feature-box">
+              <h3 class="feature-title">Планування</h3>
+              <p class="feature-description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="qualities-box">
-              <h3 class="main-qualities-title">Сучасні технології</h3>
-              <p class="main-qualities-description">
+            <li class="feature-box">
+              <h3 class="feature-title">Сучасні технології</h3>
+              <p class="feature-description">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -103,7 +103,7 @@
       </section>
       <!-- Чим займаемось -->
       <section class="what-doing">
-        <div class="container container-what-doing">
+        <div class="container">
           <h2 class="what-doing-title">Чим ми займаємося</h2>
           <ul class="what-doing-list">
             <li class="what-doing-box1">
@@ -190,7 +190,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-        <div class="container-footer">
+       
           <a class="logo-footer" href="./index.html"
             >Web<span class="studio-footer">Studio</span></a
           >
@@ -217,7 +217,7 @@
               </li>
             </ul>
           </address>
-        </div>
+        
       </div>
     </footer>
   </body>
