adjust home work

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
               </li>
             </ul>
             <ul class="portfolio-card">
-              <li class="portfolio-group1">
+              <li class="portfolio-group">
                 <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img
                     src="./images/img21.jpg"
@@ -90,7 +90,7 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-group2">
+              <li class="portfolio-group">
                 <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img
                     src="./images/img22.jpg"
@@ -106,7 +106,7 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-group3">
+              <li class="portfolio-group">
                 <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img
                     src="./images/img33.jpg"
@@ -121,7 +121,7 @@
                 </a>
               </li>
 
-              <li class="portfolio-group4">
+              <li class="portfolio-group">
                 <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img
                     src="./images/img44.jpg"
@@ -135,7 +135,7 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-group5">
+              <li class="portfolio-group">
                 <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img
                     src="./images/img55.jpg"
@@ -148,7 +148,7 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-group6">
+              <li class="portfolio-group">
                 <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img
                     src="./images/img66.jpg"
@@ -164,7 +164,7 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-group7">
+              <li class="portfolio-group">
                 <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img
                     src="./images/img77.jpg"
@@ -180,7 +180,7 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-group8">
+              <li class="portfolio-group">
                 <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img
                     src="./images/img88.jpg"
@@ -194,7 +194,7 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-group9">
+              <li class="portfolio-group">
                 <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img
                     src="./images/img99.jpg"
