--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="container">
           <h2 class="our-time-title">Наша команда</h2>
           <ul class="time-box">
-            <li class="our-time-card1">
+            <li class="our-time-card">
               <img
                 src="images/img_1.jpg"
                 class="img"
@@ -147,7 +147,7 @@
                 <p class="our-time-position">Prodact Disigner</p>
               </div>
             </li>
-            <li class="our-time-card2">
+            <li class="our-time-card">
               <img
                 src="images/img_2.jpg"
                 class="img"
@@ -159,7 +159,7 @@
                 <p class="our-time-position">Frontend Developer</p>
               </div>
             </li>
-            <li class="our-time-card3">
+            <li class="our-time-card">
               <img
                 src="images/img_3.jpg"
                 class="img"
@@ -171,7 +171,7 @@
                 <p class="our-time-position">Marketing</p>
               </div>
             </li>
-            <li class="our-time-card4">
+            <li class="our-time-card">
               <img
                 src="images/img_4.jpg"
                 class="img"
